# NEAR-fast-ft-transfer

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml
res/: fungible_token.wasm
src/: api.rs  batcher.rs  cache.rs  client.rs  lib.rs
tests/: batch_test.rs  health_test.rs  insufficient_balance_test.rs  single_transfer_test.rs  storage_deposit_test.rs  validation_test.rs
tests/common/: mod.rs
