[package]
name = "fast-ft-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }
futures = "0.3"

dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"

axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

near-jsonrpc-client = "0.18"
near-jsonrpc-primitives = "0.31.1"
near-primitives = "0.31.1"
near-crypto = "0.31.1"

moka = { version = "0.12", features = ["future"] }
dashmap = "6"

[dev-dependencies]
near-workspaces = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
